# hexchess-zero

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  Dockerfile  Makefile  PROPOSAL.md  README.md  TODOS.md  bench_results.md  docker-compose.yml  hexchess.pyi  pyproject.toml  training_log.txt
.claude/: settings.json
.claude/skills/: training-health.md
.claude/skills/training-health/: SKILL.md
.github/workflows/: _set_workspace_version.py  ci.yml  cleanup-images.yml  docker.yml  docs.yml  release.yml
ai/: training-health.md
benchmarks/: positions.json
bindings/python/: Cargo.toml  hexchess.pyi  pyproject.toml
bindings/python/src/: lib.rs
bindings/wasm/: Cargo.toml  package.json
bindings/wasm/src/: lib.rs
docs/: .gitignore  next.config.mjs  package-lock.json  package.json  source.config.ts
docs/app/: global.css  layout.tsx
docs/app/docs/: layout.tsx
docs/app/docs/[[...slug]]/: page.tsx
docs/components/hex-board/: HexBoard.tsx  hex-board.css  index.tsx  notation.ts
docs/components/mermaid/: Mermaid.tsx  index.tsx  mermaid.css
docs/components/playground/: Playground.tsx  index.tsx  playground.css  wasm.ts
docs/content/docs/: index.mdx  meta.json  playground.mdx  rules.mdx
docs/content/docs/contributing/: development.mdx  meta.json
docs/content/docs/engine/: board.mdx  inference.mdx  meta.json  move-generation.mdx
docs/content/docs/research/: deployment.mdx  evaluation.mdx  index.mdx  mcts.mdx  meta.json  model.mdx  training.mdx
docs/content/docs/usage/: index.mdx  javascript.mdx  meta.json  python.mdx  typescript.mdx
docs/scripts/: prepare-wasm.mjs
engine/: Cargo.toml
engine/benches/: movegen.rs
engine/src/: board.rs  eval.rs  game.rs  inference.rs  lib.rs  mcts.rs  minimax.rs  movegen.rs  serialization.rs
engine/tests/: equivariance.rs  mcts_strength.rs  minimax_benchmark.rs  minimax_strength.rs
engine/tests/helpers/: mod.rs  naive_minimax.rs  positions.rs
experiments/: bench_architectures.py  bench_attention_policy.py  bench_results.md
k8s/: dashboard.yaml  elo-ranking.yaml  elo-service.yaml  evaluation-service.yaml  nfs-pv.yaml  push.sh  run.sh  trainer.yaml  training-job.yaml  worker.yaml
notes/: 01-alphazero-overview.md  02-katago-innovations.md  03-lc0-lessons.md  04-mcts-tuning.md  05-network-architecture.md  06-training-loop.md  07-loss-functions.md  08-data-efficiency.md  09-evaluation-and-elo.md  10-common-failure-modes.md  11-debugging-signals.md  12-hex-chess-adaptation.md  13-implementation-plan.md  README.md
postmortems/: POSTMORTEM_APRIL_2026.md
reviews/: storage-dashboard-deployment-review.md
scripts/: bench_weighted_heuristic.py  calibrate_wdl_scale.py  eval_ablation.py  tournament.py  validate_e2e.py  validate_imitation.py
training/: __init__.py  arena.py  audit_buffer.py  audit_selfplay_quality.py  benchmark_runner.py  config.py  dashboard.html  dashboard.py  dashboard_store.py  data.py  data_v2.py  elo.py  elo_ranking.py  elo_service.py  evaluate_gate.py  evaluation_service.py  export.py  gating.py  health_checks.py  hexchess_binding.py  imitation.py  logging_setup.py  losses.py  metrics.py  model.py  replay_game.py  replay_window.py  requirements.txt  run.py  self_play.py  slack.py  storage.py  swa.py  test_audit_buffer.py  test_audit_selfplay_quality.py  test_benchmark_runner.py  test_config.py  test_dashboard_store.py  test_data.py  test_data_v2.py  (+27 more)
training/experiments/: RESULTS.md
web/: index.html  main.js  package-lock.json  package.json  style.css  vite.config.ts
web/src/: App.tsx  index.css
web/src/components/: PromotionPicker.tsx
web/src/components/board/: HexBoard.tsx
web/src/components/controls/: ControlBar.tsx  ModelLoader.tsx
web/src/components/status/: StatusBar.tsx
web/src/engine/: board-geometry.ts  wasm.ts
web/src/hooks/: use-game.ts
