[workspace]
resolver = "2"
members = [
    "engine",
    "bindings/wasm",
    "bindings/python",
]

[workspace.package]
version = "0.0.1"
edition = "2024"
license = "MIT"
description = "Glinski hexagonal chess engine with AlphaZero-style training"
repository = "https://github.com/k15z/hexchess-zero"

[workspace.dependencies]
rand = "0.9"
