[project]
name = "hexchess-zero"
version = "0.1.0"
description = "AlphaZero-style training pipeline for hexagonal chess"
requires-python = ">=3.11,<3.14"
dependencies = [
    "torch>=2.0",
    "numpy>=1.24",
    "onnx>=1.14",
    "onnxruntime>=1.15",
    "onnxscript>=0.1",
    "loguru>=0.7",
    "boto3>=1.28",
    "python-dotenv>=1.0",
]

[dependency-groups]
dev = [
    "pytest>=7.0",
    "maturin>=1.0",
    "scipy>=1.17.1",
]

[tool.uv]
# Use CPU-only PyTorch to avoid pulling CUDA deps
extra-index-url = ["https://download.pytorch.org/whl/cpu"]

[tool.uv.sources]
# hexchess bindings are built from local Rust source via maturin
hexchess = { path = "bindings/python", editable = true }

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["training*"]
