[package]
name = "hexchess-engine"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true

[features]
default = []
onnx = ["ort", "ndarray"]
tract = ["tract-onnx"]

[dependencies]
rand = { workspace = true }
ort = { version = "2.0.0-rc.12", optional = true }
ndarray = { version = "0.16", optional = true }
tract-onnx = { version = "0.21", optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "movegen"
harness = false
