[package]
name = "hexchess-python"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true

[lib]
name = "hexchess"
crate-type = ["cdylib"]

[dependencies]
hexchess-engine = { path = "../../engine", features = ["onnx"] }
pyo3 = { version = "0.24", features = ["extension-module"] }
numpy = "0.24"
